--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.0",
+    "lodash": "^4.17.11",
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-maps": "^0.24.2",
